--- a/src/pug/sections/header/profile-header.pug
+++ b/src/pug/sections/header/profile-header.pug
@@ -19,16 +19,184 @@
     //begin profile-header__icons-list
     ul.profile-header__icons-list
       li.profile-header__icons-item
-        a(href="#popup-enter").profile-header__icons-link.profile-header__icons-link--message.active.popup-open
+        a(href="#popup-enter").profile-header__icons-link.profile-header__icons-link--message.active
           +svg('messages')
           .profile-header__icons-counter
             span 22
+
+        //begin profile-header-popup
+        .profile-header-popup-wrap
+          .profile-header-popup
+            .profile-header-popup__header
+              span Новые
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                img(src="assets/img/friends/friend-05.jpg" alt="picture")
+              .profile-header-popup__info
+                span.profile-header-popup__text Александра Степанова хочет добавить Вас в друзья
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Добавить
+                  button.btn.btn--grey
+                    span Отклонить
+            //end profile-header-popup__item
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                img(src="assets/img/friends/friend-05.jpg" alt="picture")
+              .profile-header-popup__info
+                span.profile-header-popup__text Камилла Владимирова отправила Вам сообщение
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Прочитать
+            //end profile-header-popup__item
+
+            .profile-header-popup__footer
+              a(href="#") Показать еще
+        //end profile-header-popup
+
       li.profile-header__icons-item
-        a(href="#popup-form-regist").profile-header__icons-link.profile-header__icons-link--hat.popup-open
+        a(href="#popup-form-regist").profile-header__icons-link.profile-header__icons-link--hat
           +svg('hat')
+
+        //begin profile-header-popup
+        .profile-header-popup-wrap
+          .profile-header-popup
+            .profile-header-popup__header
+              span Новые
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                +svg('monitor')
+              .profile-header-popup__info
+                span.profile-header-popup__text 01.08 состоится вебинар Психология 2.0
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Посмотреть
+            //end profile-header-popup__item
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                img(src="assets/img/friends/friend-11.png" alt="picture")
+              .profile-header-popup__info
+                span.profile-header-popup__text Куратор проверил домашнее задание курса Психология 2.0. Новое Начало
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Посмотреть
+            //end profile-header-popup__item
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                img(src="assets/img/friends/friend-11.png" alt="picture")
+              .profile-header-popup__info
+                span.profile-header-popup__text У Вас новый комментарий куратора в курсе Психология 2.0
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Посмотреть
+            //end profile-header-popup__item
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                +svg('monitor')
+              .profile-header-popup__info
+                span.profile-header-popup__text 01.08 состоится вебинар Психология 2.0
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Посмотреть
+            //end profile-header-popup__item
+
+            .profile-header-popup__footer
+              a(href="#") Показать еще
+        //end profile-header-popup
+
       li.profile-header__icons-item
-        a(href="#popup-form").profile-header__icons-link.profile-header__icons-link--info.popup-open
+        a(href="#popup-form").profile-header__icons-link.profile-header__icons-link--info
           +svg('info')
+
+        //begin profile-header-popup
+        .profile-header-popup-wrap
+          .profile-header-popup
+            .profile-header-popup__header
+              span Новые
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item.profile-header-popup__item--counter
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                span 5
+              .profile-header-popup__info
+                span.profile-header-popup__text Через 5 дней заканчивается Ваша подписка
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Продлить подписку
+            //end profile-header-popup__item
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                img(src="assets/img/friends/friend-05.jpg" alt="picture")
+              .profile-header-popup__info
+                span.profile-header-popup__text Ваш комментарий к записи блога Александры Степановой удален
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Посмотреть
+            //end profile-header-popup__item
+
+            .profile-header-popup__header.profile-header-popup__header--old
+              span Прочитанные
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item.profile-header-popup__item--old.profile-header-popup__item--counter
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                span 5
+              .profile-header-popup__info
+                span.profile-header-popup__text Через 5 дней заканчивается Ваша подписка
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Продлить подписку
+            //end profile-header-popup__item
+
+            //begin profile-header-popup__item
+            .profile-header-popup__item.profile-header-popup__item--old
+              .profile-header-popup__close
+                +svg('close')
+              .profile-header-popup__ava
+                img(src="assets/img/friends/friend-05.jpg" alt="picture")
+              .profile-header-popup__info
+                span.profile-header-popup__text Ваш комментарий к записи блога Александры Степановой удален
+                .profile-header-popup__btns
+                  button.btn.btn--dark
+                    span Посмотреть
+            //end profile-header-popup__item
+
+            .profile-header-popup__footer
+              a(href="#") Показать еще
+        //end profile-header-popup
+
     //end profile-header__icons-list
 
     //begin profile-header__user
