did notifications table

--- a/src/pug/pages/profile-edit.pug
+++ b/src/pug/pages/profile-edit.pug
@@ -39,6 +39,7 @@ block content
                 +profile-aside__menu-item('personal', 'Личная информация','')
                 +profile-aside__menu-item('invite', 'Пригласить друга','')
                 +profile-aside__menu-item('wallet', 'Мой счет','')
+                +profile-aside__menu-item('ring', 'Настройка уведомлений','')
             //end profile-aside__menu
           //end profile-aside
 
