--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -48,6 +48,7 @@
 @import 'sections/my-course-homework-body-tabs';
 @import 'sections/my-course-final';
 @import 'sections/profile-blog-filter';
+@import 'sections/profile-notification';
 
 //pages
 @import 'pages/index';
