--- a/src/style/elements/_profile-aside-menu.scss
+++ b/src/style/elements/_profile-aside-menu.scss
@@ -105,6 +105,11 @@
   height: 18px;
 }
 
+.profile-aside__menu-svg--ring svg {
+  width: 20px;
+  height: 18px;
+}
+
 .profile-aside__menu-text {
   font-size: 15px;
   font-weight: 400;
