--- a/src/style/sections/_my-course-final.scss
+++ b/src/style/sections/_my-course-final.scss
@@ -12,36 +12,6 @@
   border-top: 1px solid #e4e4f2;
 }
 
-.my-course-final__rait-edit {
-  position: absolute;
-  top: 25px;
-  right: 0;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  .my-course-final__rait-edit-svg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: none;
-    width: 17px;
-    height: 17px;
-    margin-right: 9px;
-    border-radius: 50%;
-    background-color: $highlight-v;
-  }
-  svg {
-    fill: #fff;
-    width: 9px;
-    height: 9px;
-  }
-  span {
-    font-size: 12px;
-    font-weight: 300;
-    color: $highlight-v;
-  }
-}
-
 .my-course-final__item-title {
   font-size: 18px;
   font-weight: 500;
@@ -133,15 +103,49 @@
   }
 }
 
+.my-course-final__rait-textarea-wrap {
+  position: relative;
+}
+
 .my-course-final__rait-textarea {
   font-size: 14px;
   font-weight: 300;
   width: 100%;
   height: 135px;
   margin-bottom: 20px;
-  padding: 13px 20px;
+  padding: 13px 20px 20px 20px;
   color: #99a1ba;
   border: none;
-  border-radius: 5px !important;
+  border-radius: 18px !important;
   background-color: #f0f0f5;
+}
+
+.my-course-final__rait-edit {
+  position: absolute;
+  right: 15px;
+  bottom: 40px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  .my-course-final__rait-edit-svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: none;
+    width: 17px;
+    height: 17px;
+    margin-right: 9px;
+    border-radius: 50%;
+    background-color: $highlight-v;
+  }
+  svg {
+    fill: #fff;
+    width: 9px;
+    height: 9px;
+  }
+  span {
+    font-size: 12px;
+    font-weight: 300;
+    color: $highlight-v;
+  }
 }
