edit popup in profile-header

--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -2,6 +2,8 @@
 header.header
   .container
     a(href="/").header__logo
+      //img(src="assets/img/logo.svg" alt="logo")
+
       h1.header__logo-title Master Vision
       span.header__logo-subtitle Обучение эзотерическим практикам
 
