--- a/src/style/pages/_profile-message.scss
+++ b/src/style/pages/_profile-message.scss
@@ -119,11 +119,17 @@
   height: 50px;
   margin-right: 12px;
   border-radius: 50%;
-  img {
-    display: block;
-    width: 100%;
-  }
 }
+.message-ava-color-01 .rupor{fill:#9a9be9;}
+.message-ava-color-02 .rupor{fill:#bada55;}
+.message-ava-color-03 .rupor{fill:#00ffff;}
+.message-ava-color-04 .rupor{fill:#5ac18e;}
+.message-ava-color-05 .rupor{fill:#f7347a;}
+.message-ava-color-06 .rupor{fill:#fff68f;}
+.message-ava-color-07 .rupor{fill:#ff7f50;}
+.message-ava-color-08 .rupor{fill:#0e2f44;}
+.message-ava-color-09 .rupor{fill:#a0db8e;}
+.message-ava-color-10 .rupor{fill:#ccff00;}
 
 .profile-message__item-text {
   width: calc(100% - 62px);
