--- a/src/style/sections/_profile-article.scss
+++ b/src/style/sections/_profile-article.scss
@@ -236,9 +236,20 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+  &::before {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: '';
+    opacity: .3;
+    background-color: #000;
+  }
 }
 
 .article-image-header__author {
+  position: relative;
   display: flex;
   align-items: center;
 }
@@ -327,12 +338,14 @@
 .article-image-header__title {
   font-size: 25px;
   font-weight: 500;
+  position: relative;
   margin-bottom: 0;
   text-align: center;
   color: #fff;
 }
 
 .article-image-header__footer {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
 }
