did balance page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -64,5 +64,6 @@
 @import 'pages/my-course';
 @import 'pages/search-result';
 @import 'pages/profile-message';
+@import 'pages/profile-balance';
 @import 'pages/404';
 @import 'pages/tnx';
