--- a/src/pug/pages/teachers.pug
+++ b/src/pug/pages/teachers.pug
@@ -38,7 +38,7 @@ mixin teachers-item-2(pic, name, label)
       p Lorem ipsum dolor sit amet, consectetur  elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.
     .teachers-item__footer
       a(href="#").btn.btn--dark Курсы
-      a(href="#").btn.btn--grey В избранном
+      a(href="#").btn.btn--light В избранном
 
 
 
