--- a/src/pug/sections/course-banner.pug
+++ b/src/pug/sections/course-banner.pug
@@ -19,9 +19,8 @@
               include ../elements/yellow-star
               include ../elements/yellow-star
           //end course-top__rait
-        h2.course-banner__title Курс Психология 2.0
-        .course-banner__descr
-          span Вы можете пройти курс в рамках действующей подписки
+        //-h2.course-banner__title Курс Психология 2.0
+        h2.course-banner__title Прокрастинация: Как перестать откладывать важные дела на потом
       //end course-top__left
 
       //begin course-top__right
@@ -33,6 +32,8 @@
         .course-banner__right-btns
           a(href="#").btn.btn--dark Пройти обучение
           a(href="#").btn.btn--white Добавить в избранное
+        .course-banner__descr
+          span Вы можете пройти курс в рамках действующей подписки
       //end course-top__right
 
 //end course-top
