--- a/src/style/pages/_teachers.scss
+++ b/src/style/pages/_teachers.scss
@@ -208,6 +208,10 @@
   }
 }
 
+.teachers-item__body{
+  color: #1e1e1e;
+}
+
 .teachers-item__footer {
   display: flex;
   justify-content: space-between;
