--- a/src/pug/elements/header-menu.pug
+++ b/src/pug/elements/header-menu.pug
@@ -2,13 +2,13 @@
 nav.header__menu#header__menu
   ul.header__menu-list
     li.header__menu-item
-      a(href="#").header__menu-link Обучение
+      a(href="#popup-enter").header__menu-link.popup-open Обучение
     li.header__menu-item
-      a(href="#").header__menu-link Преподаватели
+      a(href="#popup-discussion").header__menu-link.popup-open Преподаватели
     li.header__menu-item
-      a(href="#").header__menu-link Блоги
+      a(href="#popup-add-users").header__menu-link.popup-open Блоги
     li.header__menu-item
-      a(href="#").header__menu-link О компании
+      a(href="#").header__menu-link.popup-open О компании
     li.header__menu-item
-      a(href="#").header__menu-link Контакты
+      a(href="#").header__menu-link.popup-open Контакты
 //end header__menu
