--- a/src/pug/pages/profile-teacher.pug
+++ b/src/pug/pages/profile-teacher.pug
@@ -69,7 +69,7 @@ mixin profile-teacher__reviews-slide(pic, text)
     .profile-teacher__reviews-text
       span #{text}
 
-mixin profile-teacher__reviews-t-slide()
+mixin profile-teacher__reviews-t-slide(text)
   li.profile-teacher__reviews-t-slide
     .profile-teacher__reviews-t-slide-inn
       .profile-teacher__reviews-t-header
@@ -87,7 +87,7 @@ mixin profile-teacher__reviews-t-slide()
           include ../elements/yellow-star-2
           include ../elements/yellow-star-2
       .profile-teacher__reviews-t-body
-        p Включает в себя фундамента́льную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в
+        p #{text}
       .profile-teacher__reviews-t-footer
         a(href="#").profile-teacher__reviews-t-link
           span Подробнее
@@ -194,12 +194,12 @@ block content
         h3.profile-teacher__section-title Отзывы
         //begin profile-teacher__reviews-t-slider
         ul.profile-teacher__reviews-t-slider
-          +profile-teacher__reviews-t-slide('01', 'Основы общей психологии это крутой курс! Он сильно мне помог')
-          +profile-teacher__reviews-t-slide('02', 'Основы общей психологии это крутой курс! Даша посоветовала')
-          +profile-teacher__reviews-t-slide('03', 'Основы общей психологии это крутой курс!')
-          +profile-teacher__reviews-t-slide('01', 'Основы общей психологии это крутой курс! Он сильно мне помог')
-          +profile-teacher__reviews-t-slide('02', 'Основы общей психологии это крутой курс! Даша посоветовала')
-          +profile-teacher__reviews-t-slide('03', 'Основы общей психологии это крутой курс!')
+          +profile-teacher__reviews-t-slide('12345678945621451234567894562145 Включает в себя фундамента́льную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в')
+          +profile-teacher__reviews-t-slide('Включает в себя фундамента́льную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в')
+          +profile-teacher__reviews-t-slide('Включает в себя фундамента́льную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в')
+          +profile-teacher__reviews-t-slide('Включает в себя фундамента́льную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в')
+          +profile-teacher__reviews-t-slide('Включает в себя фундамента́льную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в')
+          +profile-teacher__reviews-t-slide('Включает в себя фундамента́льную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в')
         //end profile-teacher__reviews-t-slider
 
         .profile-teacher__reviews-about
