--- a/src/style/elements/_header-menu.scss
+++ b/src/style/elements/_header-menu.scss
@@ -45,6 +45,7 @@
   padding-left: 25px;
   text-decoration: none;
   color: #1e1e1e;
+  font-weight: 300;
 
   @include max(1110) {
     font-size: 25px;
