--- a/src/style/elements/_popup.scss
+++ b/src/style/elements/_popup.scss
@@ -350,7 +350,7 @@
   height: 36px;
   margin-bottom: 10px;
   padding-left: 20px;
-  color: #99a1ba;
+  color: #1e1e1e;
   border: 0;
   border-radius: 20px !important;
   background-color: #f0f0f5;
