--- a/src/style/sections/_course-banner.scss
+++ b/src/style/sections/_course-banner.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.course-banner__left {
+  width: 100%;
+}
+
 .course-banner__pic-exclusive {
   position: absolute;
   top: -20px;
@@ -132,23 +136,19 @@
   font-family: $font-title;
   font-size: 35px;
   font-weight: 400;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   color: #fff;
   text-shadow: 0 0 10px rgba(0, 0, 0, .15);
 
+  @include max(760) {
+    margin-bottom: 0;
+  }
   @include max(500) {
     font-size: 30px;
+    line-height: 1.2;
   }
-}
-
-.course-banner__descr {
-  margin-bottom: 10px;
-  padding-right: 20px;
-
-  span {
-    font-size: 13px;
-    font-weight: 300;
-    color: #fff;
+  @include max(425) {
+    font-size: 24px;
   }
 }
 
@@ -157,12 +157,18 @@
   justify-content: flex-end;
   align-items: center;
   flex-wrap: wrap;
+  min-width: 600px;
   margin-left: auto;
+  padding-top: 30px;
 
+  @include max(1200) {
+    min-width: 0;
+  }
   @include max(760) {
     flex-direction: column;
     align-items: flex-start;
     margin-left: 0;
+    padding-top: 0;
   }
 }
 
@@ -196,6 +202,7 @@
     flex-direction: row;
     flex-wrap: wrap;
   }
+
   .btn {
     min-width: 185px;
     margin-left: 20px;
@@ -211,5 +218,24 @@
         margin-right: 0;
       }
     }
+  }
+}
+
+.course-banner__descr {
+  width: 100%;
+  padding-left: 50px;
+
+  @include max(1200) {
+    margin-top: 10px;
+    padding-left: 0;
+    text-align: right;
+  }
+  @include max(760) {
+    text-align: left;
+  }
+  span {
+    font-size: 13px;
+    font-weight: 300;
+    color: #fff;
   }
 }
