--- a/src/style/sections/_course-schedule.scss
+++ b/src/style/sections/_course-schedule.scss
@@ -1,6 +1,9 @@
 .course-schedule__slider {
   margin: 0 0 45px 0;
   padding: 3px 0 0 0;
+  .slick-track {
+    margin-left: -0;
+  }
   .slick-prev,
   .slick-next {
     z-index: 2;
@@ -36,12 +39,16 @@
   }
   .slick-next {
     right: -20px;
+    display: block !important;
 
     @include max(768) {
       right: -10px;
     }
     @include max(425) {
       right: -5px;
+    }
+    &.hide {
+      opacity: 0 !important;
     }
   }
 }
@@ -50,6 +57,12 @@
   position: relative;
   padding: 25px 20px 0 0;
   list-style: none;
+
+  &:last-child {
+    &::after {
+      display: none;
+    }
+  }
   span {
     font-size: 15px;
     font-weight: 300;
