--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -18,7 +18,8 @@ footer.footer
     .container.footer-top
       //begin footer-top__item
       .footer-top__item.footer-top__item--logo
-        a(href="#").footer-top__logo Master Vision
+        a(href="#").footer-top__logo
+          img(src="assets/img/logo-footer.png" alt="logo")
         span.footer-top__logo-subtitle Обучение эзотерическим практикам
       //end footer-top__item
 
