--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -49,6 +49,12 @@
 @import 'sections/my-course-final';
 @import 'sections/profile-blog-filter';
 @import 'sections/profile-notification';
+@import 'sections/about-top';
+@import 'sections/about-counters';
+@import 'sections/about-mission';
+@import 'sections/about-teacher';
+@import 'sections/about-teachers';
+@import 'sections/rss';
 
 //pages
 @import 'pages/index';
