--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -167,6 +167,7 @@ ol > *:not(li) {
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
+
   //свойство для плавной прокрутки на яблоках
 
   -webkit-overflow-scrolling: touch;
@@ -187,9 +188,11 @@ ol > *:not(li) {
   @include max(1024) {
     padding: 0 30px;
   }
+
   @include max(768) {
     padding: 0 20px;
   }
+
   @include max(425) {
     padding: 0 10px;
   }
@@ -247,19 +250,19 @@ ol > *:not(li) {
     background-color: #9a9be9;
   }
 }
+
 .btn--light {
   color: #4d4ce0;
   border-color: #4d4ce0;
   background-color: transparent;
   &:hover {
     color: $light;
-    background-color: #9a9be9;
     border-color: #9a9be9;
+    background-color: #9a9be9;
   }
 }
 
-// не исправленные кнопки
-
+// begin не исправленные кнопки
 .btn--dark-white {
   color: $light;
   background-color: $highlight-v;
@@ -281,6 +284,8 @@ ol > *:not(li) {
     background-color: transparent;
   }
 }
+
+// end не исправленные кнопки
 
 .checkbox {
   label {
