--- a/src/style/sections/_header.scss
+++ b/src/style/sections/_header.scss
@@ -11,11 +11,6 @@
 .header__logo {
   //width: 100px;
   height: 44px;
-  img {
-    display: block;
-    width: 100px;
-  }
-
   text-decoration: none;
   &:hover {
     color: #1e1e1e;
@@ -23,13 +18,9 @@
 }
 
 .header__logo-title {
-  font-family: $font-logo;
-  font-size: 24px;
-  line-height: 1;
-  margin: 0;
-  white-space: nowrap;
-  text-decoration: none;
-  color: #1e1e1e;
+  font-size: 14px;
+  line-height: 0;
+  margin: 5px 0 0 0;
 }
 
 .header__logo-subtitle {
@@ -83,6 +74,7 @@
   @include max(600) {
     margin-left: 2px;
   }
+
   @include max(425) {
     margin-left: auto;
   }
