did top section

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,7 +11,17 @@ block content
     include ../sections/header
 
     //begin content
-    section.main.index
+    main.main.index
+      include ../sections/header/profile-header
+      include ../sections/index-top
+
+
+      include ../sections/about-top
+      include ../sections/about-counters
+      include ../sections/about-mission
+      include ../sections/about-teacher
+      include ../sections/about-teachers
+      include ../sections/rss
     //end content
 
     include ../sections/footer
