--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -55,6 +55,7 @@
 @import 'sections/about-teacher';
 @import 'sections/about-teachers';
 @import 'sections/rss';
+@import 'sections/index-top';
 
 //pages
 @import 'pages/index';
