--- a/src/style/sections/_rss.scss
+++ b/src/style/sections/_rss.scss
@@ -2,8 +2,8 @@
   background-color: #fff;
   background-image: url('../img/bg-rss.jpg');
   background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-size: cover;
+  background-position: 65% 0;
+  background-size: contain;
   .container {
     display: flex;
     justify-content: space-between;
