did priority section

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -56,6 +56,7 @@
 @import 'sections/about-teachers';
 @import 'sections/rss';
 @import 'sections/index-top';
+@import 'sections/index-priority';
 
 //pages
 @import 'pages/index';
