--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,6 +14,7 @@ block content
     main.main.index
       include ../sections/header/profile-header
       include ../sections/index-top
+      include ../sections/index-priority
 
 
       include ../sections/about-top
