did popular courses

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -15,10 +15,9 @@ block content
       include ../sections/header/profile-header
       include ../sections/index-top
       include ../sections/index-priority
+      include ../sections/index-popular
 
 
-      include ../sections/about-top
-      include ../sections/about-counters
       include ../sections/about-mission
       include ../sections/about-teacher
       include ../sections/about-teachers
