--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -57,6 +57,7 @@
 @import 'sections/rss';
 @import 'sections/index-top';
 @import 'sections/index-priority';
+@import 'sections/index-popular';
 
 //pages
 @import 'pages/index';
