did why we section

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -16,6 +16,7 @@ block content
       include ../sections/index-top
       include ../sections/index-priority
       include ../sections/index-popular
+      include ../sections/why-we
 
 
       include ../sections/about-mission
