--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -58,6 +58,7 @@
 @import 'sections/index-top';
 @import 'sections/index-priority';
 @import 'sections/index-popular';
+@import 'sections/why-we';
 
 //pages
 @import 'pages/index';
