did best teachers

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -17,11 +17,11 @@ block content
       include ../sections/index-priority
       include ../sections/index-popular
       include ../sections/why-we
+      include ../sections/index-best
 
 
       include ../sections/about-mission
       include ../sections/about-teacher
-      include ../sections/about-teachers
       include ../sections/rss
     //end content
 
