--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -59,6 +59,7 @@
 @import 'sections/index-priority';
 @import 'sections/index-popular';
 @import 'sections/why-we';
+@import 'sections/index-best';
 
 //pages
 @import 'pages/index';
