--- a/src/style/sections/_why-we.scss
+++ b/src/style/sections/_why-we.scss
@@ -1,24 +1,25 @@
-.why-we{
-  background-image: linear-gradient(to right, #bbdff2 0%, #d7bbf2 100%);
+.why-we {
   position: relative;
+  background-image: linear-gradient(to right, #bbdff2 0%, #d7bbf2 100%);
   &::before {
-    content: '';
     position: absolute;
     top: 0;
-    bottom: 0;
     right: 0;
+    bottom: 0;
     left: 0;
+    content: '';
     background-image: url('../img/bg-why-we-triangle.png');
-    background-size: contain;
     background-repeat: no-repeat;
     background-position: 100% 50%;
+    background-size: contain;
   }
-  .container{
+  .container {
+    padding-top: 90px;
+    padding-bottom: 60px;
     background-image: url('../img/bg-why-we.png');
     background-repeat: no-repeat;
     background-position: 30px 100%;
-    padding-top: 90px;
-    padding-bottom: 60px;
+
     @include max(860) {
       background-image: none;
     }
@@ -28,56 +29,61 @@
     }
   }
 }
-.why-we__info{
+
+.why-we__info {
   padding-left: 400px;
+
   @include max(860) {
     padding-left: 0;
   }
 }
-.why-we__title{
-  color: #1e1e1e;
+
+.why-we__title {
   font-family: $font;
   font-size: 25px;
   font-weight: 500;
-}
-.why-we__subtitle{
   color: #1e1e1e;
+}
+
+.why-we__subtitle {
   font-family: $font;
   font-size: 20px;
   font-weight: 300;
   line-height: 27px;
   margin-bottom: 43px;
+  color: #1e1e1e;
 }
-.why-we__item{
+
+.why-we__item {
   display: flex;
-  margin-bottom: 27px;
   width: 100%;
   max-width: 610px;
+  margin-bottom: 27px;
+
   @include max(860) {
     max-width: 100%;
   }
   span {
-    color: #1e1e1e;
     font-family: $font;
     font-size: 17px;
     font-weight: 300;
     line-height: 28px;
-
+    color: #1e1e1e;
 
     strong {
-    font-weight: 500;
-
+      font-weight: 500;
     }
   }
 }
-.why-we__item-svg{
-  width: 70px;flex: none;
+
+.why-we__item-svg {
+  flex: none;
+  width: 70px;
   padding-top: 5px;
   svg {
     fill: #4d4ce0;
-    margin-right: 25px;
     max-width: 45px;
     max-height: 45px;
+    margin-right: 25px;
   }
-
 }
