--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,10 +18,8 @@ block content
       include ../sections/index-popular
       include ../sections/why-we
       include ../sections/index-best
-
-
-      include ../sections/about-mission
-      include ../sections/about-teacher
+      include ../sections/index-direction
+      include ../sections/index-blogs
       include ../sections/rss
     //end content
 
