--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -60,6 +60,8 @@
 @import 'sections/index-popular';
 @import 'sections/why-we';
 @import 'sections/index-best';
+@import 'sections/index-direction';
+@import 'sections/index-blogs';
 
 //pages
 @import 'pages/index';
