--- a/src/pug/sections/about-teacher.pug
+++ b/src/pug/sections/about-teacher.pug
@@ -40,7 +40,7 @@
     //end about-teacher__education-list
 
     .about-teacher__people
-      img(src="assets/img/teacher.png" alt="teacher")
+      img(src="assets/img/teacher-2.png" alt="Andrey Grudin")
 
     //begin about-teacher__info
     .about-teacher__info
