--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -19,8 +19,10 @@ footer.footer
       //begin footer-top__item
       .footer-top__item.footer-top__item--logo
         a(href="#").footer-top__logo
-          img(src="assets/img/logo-footer.png" alt="logo")
-        span.footer-top__logo-subtitle Обучение эзотерическим практикам
+          img(src="assets/img/logo-footer.svg" alt="Эволюционика")
+
+          //-img(src="assets/img/logo-footer.png" alt="logo")
+        //-span.footer-top__logo-subtitle Обучение эзотерическим практикам
       //end footer-top__item
 
       +footer-top__item('Обучение', 'Lorem ipsum dolor', 'Lorem ipsum dolor sit ', 'Lorem ipsum ', 'Lorem ipsum dolor')
