--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -3,8 +3,7 @@ header.header
   .container
     a(href="/").header__logo
       h1.header__logo-title
-        img(src="assets/img/logo-ev.png" alt="logo")
-      span.header__logo-subtitle Обучение эзотерическим практикам
+        img(src="assets/img/logo-header.svg" alt="Эволюционика")
 
     include ../elements/header-menu
       
