--- a/src/style/sections/_header.scss
+++ b/src/style/sections/_header.scss
@@ -15,17 +15,10 @@
   &:hover {
     color: #1e1e1e;
   }
-}
-
-.header__logo-title {
-  font-size: 14px;
-  line-height: 0;
-  margin: 5px 0 0 0;
-}
-
-.header__logo-subtitle {
-  font-size: 9px;
-  color: #1e1e1e;
+  img {
+    display: block;
+    height: 45px;
+  }
 }
 
 .header__social-list {
